Removed all enumeration based getArray() calls, manually replacing all calls with the appropriate Collection.list(Enumeration).toArray(IntFunction) call.